--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
 	<title>Best final project ever</title>
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-	<h1 id="sorry" style="display: none;">Sorry other players are already playing</h1>
-	<input type="text" name="answer" id="input">
-	<button onclick="send()">Send</button>
-	<span id ="history"></span>=<span id="total"></span>
+	<h1 id="sorry" class="invisible">Sorry other players are already playing</h1>
+	<h1 id="wait">Wait for other users</h1>
+	<input type="text" name="answer" id="input" class="invisible game-components">
+	<button onclick="send()" class="invisible game-components">Send</button>
+	<span id ="history" class="invisible game-components"></span>=<span id="total" class="invisible game-components"></span>
+	<script
+	  src="https://code.jquery.com/jquery-3.2.1.min.js"
+	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+	  crossorigin="anonymous"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="js/script.js"></script>
 </body>
