--- a/frontend/Final project/index.html
+++ b/frontend/Final project/index.html
@@ -13,12 +13,14 @@
 			<img src="https://chupacdn.s3.amazonaws.com/catalog/product/cache/1/thumbnail/1280x/17f82f742ffe127f42dca9de82fb58b1/1/2/12-vector-game-backgrounds-8320_imgs_8320_4.png" alt="background_image" id="mainBackground">
 		</div>
 			<div class="content col-md-9">
-				<div class="totalNumber"><h2>41</h2></div>
+				<div class="totalNumber"><h2 id="goal">41</h2></div>
+				<div class='history'>
+					<span>amren armen</span>
+					<span class='equal'>=</span>
+				</div>
 				<div class="operators">
 					<div id="shur1"><img src="images/shuriken.png" alt="shuriken"></div>
 					<div id="shur2"><img src="images/shuriken.png" alt="shuriken"></div>
-					<div id="shur3"><img src="images/shuriken.png" alt="shuriken"></div>
-					<div id="shur4"><img src="images/shuriken.png" alt="shuriken"></div>
 				</div>
 			</div>
 			<div class="info col-md-3">
