Add hints for Heno

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
 	<div class="container-fluid">
 		<div class="mainBackground">
 			<img src="https://chupacdn.s3.amazonaws.com/catalog/product/cache/1/thumbnail/1280x/17f82f742ffe127f42dca9de82fb58b1/1/2/12-vector-game-backgrounds-8320_imgs_8320_4.png" alt="background_image" id="mainBackground">
+			<canvas></canvas>
 		</div>
 		<div class="content col-md-9">
 			<div class="row">
