Add buttons functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,8 +45,8 @@
 				</div>
 				<div class="col-md-4">
 					<div class="col-md-12 weapon">
-							<img src="images/plus.png" alt="shuriken">
-							<img src="images/minus.png" alt="shuriken">
+							<img src="images/plus.png" alt="shuriken" id="plus">
+							<img src="images/minus.png" alt="shuriken" id="minus">
 					</div>
 				</div>
 			</div>
